<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Anuto TD</string>

    <string name="menu">Menu</string>
    <string name="build_tower">Build</string>
    <string name="next_wave">Next Wave</string>
    <string name="var_speed" translatable="false">%1$dx</string>
    <string name="fast_forward" translatable="false">\>\></string>

    <string name="restart">Restart</string>
    <string name="save_game">Save Game</string>
    <string name="game_saved">Game saved</string>
    <string name="load_game">Load Game</string>
    <string name="change_map">Change Map</string>
    <string name="settings">Settings</string>

    <string name="delete">Delete</string>

    <string name="sound">Sound</string>
    <string name="theme">Theme</string>
    <string name="change_theme">Change theme</string>
    <string name="change_theme_warning">Are you sure you want to change the theme? The game will restart.</string>
    <string name="back_button_mode">Close app with back button</string>
    <string name="reset_highscores">Reset highscores</string>
    <string name="reset_highscores_warning">Are you sure you want to reset all highscores?</string>
    <string name="start_tutorial">Start tutorial</string>
    <string name="start_tutorial_warning">Are you sure you want to start the tutorial? The game will restart.</string>
    <string name="transparent_menus">Transparent in-game menus</string>

    <string name="game_over">Game Over!</string>
    <string name="score">Score</string>

    <string name="credits">Credits</string>
    <string name="lives">Lives</string>
    <string name="wave">Wave</string>
    <string name="bonus">Bonus</string>

    <string name="level">Level</string>
    <string name="damage">Damage</string>
    <string name="reload">Reload</string>
    <string name="range">Range</string>
    <string name="splash">Explosive radius</string>
    <string name="distance">Distance</string>
    <string name="intensity">Intensity</string>
    <string name="duration">Duration</string>
    <string name="inflicted">Inflicted</string>
    <string name="dps">Damage/Sec</string>

    <string name="lock_target">Lock Target</string>
    <string name="strategy">Strategy</string>
    <string name="enhance">Enhance</string>
    <string name="upgrade">Upgrade</string>
    <string name="sell">Sell</string>

    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="twice">Twice</string>

    <string name="strategy_closest">Closest</string>
    <string name="strategy_weakest">Weakest</string>
    <string name="strategy_strongest">Strongest</string>
    <string name="strategy_first">First</string>
    <string name="strategy_last">Last</string>

    <string name="theme_original">Original</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_colour">Colour</string>

    <string name="map_original_name">The Original</string>
    <string name="map_waiting_line_name">I hate waiting lines</string>
    <string name="map_turn_round_name">Turn a round</string>
    <string name="map_hurry_name">We\'re in a hurry!</string>
    <string name="map_civyshk_2y_name">Civyshk 2Y</string>
    <string name="map_civyshk_line5_name">Civyshk Line5</string>
    <string name="map_civyshk_labyrinth_name">Civyshk Labyrinth</string>
    <string name="map_civyshk_yard_name">Civyshk Yard</string>
    <string name="map_higgledy_piggledy_name">Higgledy Piggledy</string>
    <string name="map_big_u_name">Big U</string>
    <string name="map_cloverleaf_name">Cloverleaf</string>
    <string name="map_roundabout_name">Roundabout</string>
    <string name="map_runway_name">Runway</string>
    <string name="map_wtf_name">WTF?</string>
    <string name="map_turn_left_name">Turn Left</string>
    <string name="map_turn_right_name">Turn Right</string>
    <string name="map_oddball_name">Oddball</string>
    <string name="map_spiral1_name">Spiral v1</string>
    <string name="map_chaos_name">Chaos</string>
    <string name="map_moar_chaos_name">Moar Chaos</string>
    <string name="map_spiral2_name">Spiral v2</string>
    <string name="map_nou_name">No, U</string>
    <string name="map_highscore_name">Highscore!</string>
    <string name="press_back_button_again_toast">Press back button again to exit</string>

    <string name="tutorial">Getting Started</string>
    <string name="got_it">Got It!</string>
    <string name="skip_tutorial">Skip Tutorial</string>

    <string name="tutorial_build_tower">Welcome to Anuto TD! Start by building a tower: Drag a tower from the inventory on top onto the playground.</string>
    <string name="tutorial_credits">If the price tag of a tower becomes red, you don\'t have enough credits to buy this tower. You earn credits by killing enemies and finishing waves.</string>
    <string name="tutorial_tower_options_1">Tap a tower to view its range, tap it again to open its menu for more options.</string>
    <string name="tutorial_tower_options_2">The strategy defines how the tower chooses its target. Lock target means that the tower will not switch target as long as the current target stays within range.</string>
    <string name="tutorial_tower_options_3">Enhancing a tower will make it perform better. Upgrading a tower will replace the tower with a better tower.\n\n<b>Tip:</b> If upgrading towers, keep in mind that credits already spent into enhancements are lost.</string>
    <string name="tutorial_tower_options_4">Selling the tower will remove it and you\'ll get some credits back.\n\n<b>Tip:</b> Towers decrease in value over time.</string>
    <string name="tutorial_next_wave">Press \"Next Wave\" to call in the next wave of enemies. The goal is that none of them makes it through your defense.\n\n<b>Tip:</b> If you call in the next wave while there are still active waves, you earn bonus credits!</string>
    <string name="tutorial_enemies">If an enemy finishes the path, you lose one life. The game is over if you have no more lives left.\n\n<b>Tip:</b> Some towers are more effective against a certain type of enemy than others.</string>
    <string name="tutorial_finish">Good luck and have fun! You can activate the tutorial again in the settings.</string>

    <string name="enemy_stats">Enemy Stats</string>
    <string name="name">Name:</string>
    <string name="health">Health:</string>
    <string name="speed">Speed:</string>
    <string name="reward">Reward:</string>
    <string name="weak_against">Weak against:</string>
    <string name="strong_against">Strong against:</string>
    <string name="none">None</string>

    <string name="enemy_soldier">Soldier</string>
    <string name="enemy_blob">Blob</string>
    <string name="enemy_sprinter">Sprinter</string>
    <string name="enemy_flyer">Flyer</string>
    <string name="enemy_healer">Healer</string>

    <string name="dolphin_damage">Dolphin Damage</string>
    <string name="dolphin_count">Dolphin Count</string>
    <string name="makoto_dolphin">Dolphin Tower</string>

    <!-- Leaderboard related strings -->
    <string name="leaderboard">Leaderboard</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="rank">Rank</string>
    <string name="score_value">Score</string>
    <string name="wave_number">Wave</string>
    <string name="lives_count">Lives</string>
    <string name="date">Date</string>
    <string name="no_entries">No entries</string>
    <string name="clear_leaderboard">Clear Leaderboard</string>
    <string name="clear_leaderboard_warning">Are you sure you want to clear the leaderboard?</string>
    <string name="leaderboard_entry_format">#%1$d</string>
    <string name="leaderboard_map_all">All Maps</string>
    <string name="close">Close</string>

    <string name="show_paths">Show Enemy Paths</string>
    <string name="hide_paths">Hide Enemy Paths</string>

    <string name="shop">Shop</string>
    <string name="coins_format">Coins: %d</string>
    <string name="price_format">Price: %d</string>
    <string name="buy">Buy</string>
    <string name="back">Back</string>
    <string name="purchase_successful">Purchase successful!</string>
    <string name="insufficient_coins">Insufficient coins!</string>

</resources>
